# si_unit_pandas

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  __pkginfo__.py  demo.py  formate.toml  git_helper.yml  lint_roller.sh  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.ci/: copy_pypi_2_github.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  octocheese.yml
doc-source/: Building.rst  Source.rst  conf.py  contributing.rst  docs.rst  index.rst  license.rst  requirements.txt  usage.rst
docs/source/: api.rst  changelog.rst  conf.py  index.rst  usage.rst
si_unit_pandas/: __init__.py  base.py  parser.py  temperature.py  temperature_array.py
tests/: requirements.txt  test_dtype.py  test_extension_array.py  test_ip.py  test_ip_pandas.py  test_pandas.py  test_pandas_methods.py  test_parser.py  test_si_unit_pandas.py
tests/test_temperature/: test_dtype.py  test_extension_array.py  test_output.py  test_pandas.py  test_pandas_methods.py  test_temperature.py
tests/test_temperature/test_output_/: test_output.txt
